# docushark

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  Taskfile.yml  Todo.Relay.md  Todo.md  index.html  package.json  vite.config.ts
.github/workflows/: docs.yml  pr-check.yml  relay-image.yml  release.yml
docs-site/: index.md  package.json  tsconfig.json
docs-site/.vitepress/: config.mts
docs-site/developer/: architecture.md  collaboration-protocol.md  contributing.md  core-systems.md  creating-prose-helpers.md  creating-shapes.md  creating-tools.md  mcp-agent-recipes.md  plugin-development.md  project-setup.md  roadmap.md  shape-properties.md  state-management.md  utilities.md
docs-site/getting-started/: installation.md  interface-tour.md  introduction.md  quick-start.md
docs-site/guide/: canvas-navigation.md  citations.md  collaboration.md  collections.md  connect-your-agent.md  connectors.md  document-fields.md  drawing-tools.md  embedded-files.md  export-import.md  keyboard-shortcuts.md  layout-modes.md  multi-page-documents.md  rich-text-editor.md  settings.md  shape-libraries.md  styling.md  whiteboard.md
docs-site/public/: CNAME  robots.txt
public/icons/: README.md  aws-manifest.json  azure-manifest.json  gcp-manifest.json
relay/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  relay.service
relay/.wrangler/cache/: cf.json
relay/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
relay/.wrangler/state/v3/r2/miniflare-R2BucketObject/: metadata.sqlite-shm  metadata.sqlite-wal
relay/docs/api/: README.md  deprecation-policy.md  openapi.yaml  revocation.md  token-format.md  webhooks.md
relay/docs/mcp/: README.md
relay/scripts/: mcp-smoke.sh
relay/src/: api.rs  build_info.rs  config.rs  lib.rs  main.rs  test_support.rs
relay/src/auth/: bootstrap.rs  error.rs  jwks.rs  jwt.rs  mod.rs  revocation.rs  users.rs
relay/src/mcp/: adapter.rs  citations.rs  config.rs  fields.rs  icons.rs  layout.rs  local_mirror.rs  mod.rs  outline.rs  route.rs  skills.rs  tools.rs  transport.rs
relay/src/mcp/icons/: catalog.json
relay/src/mcp/layout/: acyclic.rs  coords.rs  mod.rs  order.rs  rank.rs
relay/src/mcp/skills/: architecture-rfc.SKILL.md  diagram-from-description.SKILL.md  document-codebase-module.SKILL.md
relay/src/server/: blobs.rs  chunk.rs  documents.rs  mod.rs  permissions.rs  protocol.rs
relay/src/server/blob_backend/: filesystem.rs  mod.rs  s3.rs
relay/src/sync/: binary.rs  flatten.rs  hydration.rs  mod.rs  prose_block.rs  prose_html.rs  prose_parse.rs  prose_schema.rs  prose_validate.rs  protocol.rs
relay/tests/: blob_download_url.rs  blob_gc.rs  blob_presign_flow.rs  blob_upload_limit.rs  cross_tenant_isolation.rs  free_tier_enforcement.rs  index_no_clobber.rs  jwks_cold_start.rs  metering_conn_counts.rs  panic_isolation.rs  public_mcp.rs  purge_member_shares.rs  rate_limits.rs  resource_aud.rs  smoke.rs  tenancy_modes.rs  yjs_authority.rs
relay/tests/protocol-fixtures/: README.md
scripts/: _defines.ts  gen-icon-catalog.test.ts  gen-icon-catalog.ts  mermaid-to-svg.ts
skills/: CONNECTING.md  README.md
skills/meeting-notes-to-doc/: SKILL.md
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mcp/: adapter.rs  tools.rs  transport.rs
src/api/: authCallback.test.ts  authCallback.ts  cloudAuth.test.ts  cloudAuth.ts  completeCloudSignIn.test.ts  completeCloudSignIn.ts  relayClient.test.ts  relayClient.ts  relayConnection.test.ts  relayConnection.ts  relayLocations.test.ts  relayLocations.ts  relayTokenUser.test.ts  relayTokenUser.ts  restDocumentProvider.test.ts  restDocumentProvider.ts  restoreCloudSession.test.ts  restoreCloudSession.ts  storageInfoToast.test.ts  storageInfoToast.ts  tokenRefresh.test.ts  tokenRefresh.ts  webClient.test.ts  webClient.ts
src/collaboration/: BlobSyncService.test.ts  BlobSyncService.ts  CanvasUndoController.ts  OfflineQueue.test.ts  OfflineQueue.ts  SyncStateManager.test.ts  SyncStateManager.ts  UnifiedSyncProvider.test.ts  UnifiedSyncProvider.ts  YjsDocument.canvasPages.test.ts  YjsDocument.fields.test.ts  YjsDocument.prose.test.ts  YjsDocument.prosePages.test.ts  YjsDocument.references.test.ts  YjsDocument.test.ts  YjsDocument.ts  YjsDocument.undo.test.ts  canvasPageGuard.test.ts  canvasPageGuard.ts  collabRoom.test.ts  collabRoom.ts  collaborationStore.test.ts  collaborationStore.ts  ensureCollabSession.test.ts  ensureCollabSession.ts  handleRelayJoinError.test.ts  index.ts  isRelaySessionLive.test.ts  offlineFirstEngine.test.ts  offlineFirstEngine.ts  offlinePageGuard.test.ts  offlinePageGuard.ts  prefetchYdoc.test.ts  prefetchYdoc.ts  proseReseedDuplication.test.ts  proseSchema.ts  protocol.test.ts  protocol.ts  seedClobber.proof.test.ts  sharedDocOffline.test.ts  (+3 more)
src/config/: featureFlags.test.ts  featureFlags.ts
src/engine/: Camera.test.ts  Camera.ts  CommandRegistry.test.ts  CommandRegistry.ts  ContrastResolver.test.ts  ContrastResolver.ts  Engine.coldStart.test.ts  Engine.ts  InputHandler.test.ts  InputHandler.ts  KeyboardShortcuts.ts  OrthogonalRouter.test.ts  OrthogonalRouter.ts  RenderContext.ts  Renderer.test.ts  Renderer.ts  connectorReroute.test.ts  connectorReroute.ts  keybindings.test.ts  keybindings.ts  orthogonalRouterCore.test.ts  orthogonalRouterCore.ts  pageNavigation.test.ts  pageNavigation.ts  selectionLayout.test.ts  selectionLayout.ts
src/hooks/: useAutoSave.ts
src/migrations/: documentMigrations.test.ts  documentMigrations.ts  teamDocumentMigration.test.ts  teamDocumentMigration.ts  teamDocumentMigrationHelpers.ts
src/platform/: adaptiveBudget.test.ts  adaptiveBudget.ts  device.ts  dialog.ts  fileDrop.tauri.ts  fileDrop.ts  fileDrop.web.ts  fs.tauri.ts  fs.ts  importBoundary.test.ts  index.ts  opener.tauri.ts  opener.ts  opener.web.ts  os.ts  platform.tauri.test.ts  platform.web.test.ts  relayFetch.tauri.ts  relayFetch.ts  relayFetch.web.ts  runtime.ts  (+6 more)
(+585 files in other folders)
