[package]
name = "docushark-relay"
version = "0.1.0"
description = "DocuShark Relay — standalone collaboration / MCP / auth server for DocuShark clients."
authors = ["DocuShark Team"]
license = "MIT"
repository = "https://github.com/JPE-Net-Technologies/docushark"
edition = "2021"
rust-version = "1.77.2"

# Independent crate. Not a workspace member of `src-tauri/`. Built with
# its own `cargo build` / `cargo test` from this directory.

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "docushark_relay"
path = "src/lib.rs"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Auth (Phase 14.1 — lifted from src-tauri)
jsonwebtoken = "9"
bcrypt = "0.15"
nanoid = "0.4"

# LAN IP detection (used by server bind helpers — kept until Slice D
# removes the legacy LAN-discovery code path)
local-ip-address = "0.6"

# Cryptographic hashing for blob storage (Phase 17.5 — lifted)
sha2 = "0.10"
hex = "0.4"

# CSPRNG for `relay init` JWT-secret generation
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# Config
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
