[package]
name = "docushark-relay"
version = "0.1.0"
description = "DocuShark Relay — standalone collaboration / MCP / auth server for DocuShark clients."
authors = ["DocuShark Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/JPE-Net-Technologies/docushark"
edition = "2021"
# Bumped from 1.77.2 for JP-34: the authoritative server-side CRDT (`yrs`
# 0.26) and its modern transitive stack (thiserror 2.x, the icu4x 2.x crates
# pulled via url/reqwest) require a newer compiler. We take the latest `yrs`
# for its CRDT fixes rather than pinning an older release to hold the old MSRV.
rust-version = "1.82"

# Independent crate. Not a workspace member of `src-tauri/`. Built with
# its own `cargo build` / `cargo test` from this directory.

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "docushark_relay"
path = "src/lib.rs"

[features]
# Exposes the `test_support` module + `WorkspaceId::for_tests` etc. so
# integration tests under `tests/` can drive auth without spinning up a
# real OIDC issuer. Implicit `test-only` carrier — never enable on a
# production build.
test-helpers = ["dep:rsa"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Auth — OIDC resource server (JP-77). Validates RS256 tokens minted by
# an external issuer; bcrypt/passwords were removed alongside the
# `/api/auth/*` surface.
jsonwebtoken = "9"
nanoid = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
# Optional, only pulled in when `test-helpers` is enabled — the lib's
# `test_support` module uses it to mint RSA keypairs for fake OIDC
# issuers in integration tests.
rsa = { version = "0.9", features = ["sha2", "pem"], optional = true }

# LAN IP detection (used by server bind helpers — kept until Slice D
# removes the legacy LAN-discovery code path)
local-ip-address = "0.6"

# Cryptographic hashing for blob storage (Phase 17.5 — lifted)
sha2 = "0.10"
hex = "0.4"
# HMAC-SHA256 for the S3/R2 SigV4 request signer (blob_backend/s3.rs). A
# lightweight presign-only signer over the existing `reqwest`/`sha2` stack —
# deliberately *not* `aws-sdk-s3` (keeps the relay's 1.77.2 MSRV + a small dep
# tree; the relay only needs presign + HEAD + DELETE against R2).
hmac = "0.12"

# CSPRNG (used for nonces in the revocation push bearer compare, plus
# test-side keypair generation).
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# Config
toml = "0.8"

# Markdown → HTML for MCP prose tools (JP-93). Agents reliably emit
# Markdown; the editor persists prose as HTML. pulldown-cmark is pure-Rust,
# MSRV-friendly (rustdoc's own renderer), and tiny — deliberately not a
# heavier CommonMark stack, matching the small-dep-tree stance above.
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Per-workspace token-bucket rate limiting (Phase 21.3)
governor = "0.7"

# Authoritative server-side Yjs CRDT (Phase 20.4 / JP-34). Holds a Y.Doc
# per active document, applies inbound SYNC frames, and answers a joining
# client's SyncStep1 with authoritative state. lib0-v1 wire-compatible with
# the JS `y-protocols` client. Pulls serde/serde_json/dashmap — already deps.
yrs = "0.26"

[dev-dependencies]
docushark-relay = { path = ".", features = ["test-helpers"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
# Phase 21.4 fuzz suite (`tests/cross_tenant_isolation.rs`) — already
# main deps, re-listed here so the integration test sees them.
rand = "0.8"
nanoid = "0.4"
sha2 = "0.10"
hex = "0.4"
# Phase 21.4-B — WS client used by `fuzz_ws_awareness_and_mcp_workspace_mismatch`.
tokio-tungstenite = "0.21"
futures-util = "0.3"

[profile.release]
lto = true
opt-level = "s"
strip = true
