[package]
name = "diagrammer"
version = "1.3.1-beta.1"
description = "A high-performance diagramming and whiteboard application"
authors = ["Diagrammer Team"]
license = "MIT"
repository = "https://github.com/QR-Madness/diagrammer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "diagrammer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri — pin all plugins to exact minor versions matching tauri core.
# Phase 20.3 Slice E.4: Protected Local, JWT auth, MCP, blob storage,
# and LAN discovery all moved to the standalone diagrammer-relay
# binary, taking axum/tower-http/futures-util/tokio-stream/
# jsonwebtoken/bcrypt/nanoid/local-ip-address/sha2/hex with them.
tauri = { version = "2.10.1", features = ["image-png"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"

# Tauri's async runtime — required even after the WS server moved
# out, since Tauri itself uses tokio internally.
tokio = { version = "1", features = ["full"] }

# Minimal HTTP stack for the bundled-docs static server (`open_docs`
# command). Was previously load-bearing for Protected Local too; now
# scoped down to just the docs path.
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }

# DevTools for debugging (guarded by cfg(debug_assertions) in code)
tauri-plugin-devtools = "2.0.1"

[profile.release]
lto = true
opt-level = "s"
strip = true
